# aztec-list

./: .pre-commit-config.yaml  README.md
.github/: dependabot.yml
.github/workflows/: codeql.yml  gitleaks.yml  security-audit.yml
backend/: Dockerfile  pyproject.toml
frontend/: .gitignore  Dockerfile  package.json
frontend/src/components/custom/__tests__/: header.test.tsx
