[project]
name = "aztec-list"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "jinja2>=3.1.6",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.12.0",
    "resend>=2.30.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.14.1",
]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "pytest-cov>=7.1.0",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501",   # line too long (handled by line-length)
    "COM812", # missing trailing comma (handled by formatter)
    "D203",   # no blank line before class docstrings
    "D212",   # keep summary on first line
    "D413",   # blank line after last docs section
    "D1",     # ignore all "missing docstring" rules
    "TD",     # ignore all TODO rules
    "FIX002", # line contains TODO
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-v --strict-markers --cov=app --cov-report=term-missing --cov-report=html"
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for workflows",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src/app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
]
